--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
  </head>
  <body>
   <script type="text/javascript">
-    var questionText = quizTestObj.questionText; //Объявляю переменные
+    var questionText = quizTestObj.questionText;
     var answerFirst = quizTestObj.answerFirst;
     var answerSecond = quizTestObj.answerSecond;
     var answerThird = quizTestObj.answerThird;
@@ -17,40 +17,41 @@
     var toBreak = false;
     var moneyCheckpoint = "0$"
     var countOfJSON = quizTestObj.questionText.length;
-
+    var response = [];
     function userQuestion(i) {
-            userAnswer = prompt("Вопрос: " + questionText[i] + "\n" + "Ответы: " + "\n" + answerFirst[i] + "\n" + answerSecond[i] + "\n" + answerThird[i] + "\n" + answerFourth[i]) //Задаёт вопрос
+            userAnswer = prompt("INTREBARE: " + questionText[i] + "\n" + "RASPUNSURI: " + "\n" + answerFirst[i] + "\n" + answerSecond[i] + "\n" + answerThird[i] + "\n" + answerFourth[i]);
             if (userAnswer.toLowerCase() == rightAnswer[i]) {
+                response[i] =  addDateToReturnObj(i+1,true,moneyWon[i]);
+                response['total'] = moneyCheckpoint;
                 if (i == (countOfJSON - 1)) {
-                    alert("Поздравляем с победой! Миллион ваш!");
-                    downloadJSON(JSON.stringify(addDateToReturnObj(), null, '\t'), 'quizTWA.json', 'text/plain');
+                    alert("FELICITARI!");
+                    downloadJSON(JSON.stringify(response, null, '\t'), 'quizTWA.json', 'text/plain');
                 } else {
-                    var toContinue = confirm("Правильный ответ! Будете продолжать игру?")
+
+                    var toContinue = confirm("Raspuns Corect ,  continuam?")
                     if (!toContinue) {
-                        alert("В таком случае, вы выиграли " + moneyWon[i])
+                        alert("Ai castigat  " + moneyWon[i])
                         toBreak = true;
                         return 0;
-                    } else {
-                        alert("Хорошо, идём дальше...")
                     }
                 }
             } else {
-                alert('Ответ неправильный! Вы выигрываете ' + moneyCheckpoint + "\n" + "Правильный ответ: " + rightAnswer[i]);
-                downloadJSON(JSON.stringify(addDateToReturnObj(), null, '\t'), 'quizTWA.json', 'text/plain');
+                response[i] =  addDateToReturnObj(i+1,false,0);
+                response['total'] = 0;
+                alert('Raspuns Gresit! Ai castigat ' + moneyCheckpoint + "\n" + "Raspuns corect: " + rightAnswer[i]);
+                downloadJSON(JSON.stringify(response, null, '\t'), 'quizTWA.json', 'text/plain');
                 toBreak = true
-                
             }
     }
         for (var i = 0; i < countOfJSON; i++) {
             userQuestion(i)
-            if (i == 2) { //Если это 3 ...
+            if (i == 2) {
                 moneyCheckpoint = moneyWon[i]
             }
             if (toBreak) {
                 break;
             }
         }
-
 
         function downloadJSON(text, name, type) {
 		    var a = document.createElement("a");
@@ -64,23 +65,19 @@
 
 
 //template
-        function addDateToReturnObj(){
+        function addDateToReturnObj(question,result,earned){
 			var returnObj = {
-			  1:{
+
 			    question: "",
-			    time: "",
-			    answers:{
-			      correct:{
-			        text:""
-			      },
-			      response:{
-			        text:""
-			      }
-			    } 
-			  }
+			    result:"",
+			    earned:""
+
 			}
 
-			returnObj[1].question = 'prima intrebare';
+			returnObj.question = question;
+			returnObj.result = result;
+			returnObj.earned = earned;
+
 			  return returnObj;
 			}
   </script>
